[gd_scene load_steps=4 format=3 uid="uid://ol8yqvgp7dw5"]

[ext_resource type="Script" path="res://menus/main_menu.gd" id="1_x5sxb"]
[ext_resource type="PackedScene" uid="uid://c4d51spgxoxyx" path="res://menus/player_selection/player_selection.tscn" id="2_4mwd0"]
[ext_resource type="Texture2D" uid="uid://cmomeyfr2i0fn" path="res://menus/main_menu.png" id="4_nv1io"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_x5sxb")
play_scene = ExtResource("2_4mwd0")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_nv1io")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -35.0
offset_top = -50.5
offset_right = 35.0
offset_bottom = 50.5
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="ButtonStart" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Start"

[node name="ButtonCredits" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Credits"

[node name="ButtonQuit" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Quit"

[connection signal="pressed" from="VBoxContainer/ButtonStart" to="." method="_on_button_start_pressed"]
[connection signal="pressed" from="VBoxContainer/ButtonCredits" to="." method="_on_button_settings_pressed"]
[connection signal="pressed" from="VBoxContainer/ButtonQuit" to="." method="_on_button_quit_pressed"]
